Updated Navbar on landing page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,11 +15,12 @@
                 <a href="/">TechStack</a>
             </h1>
             <nav>
+                <a href="/">Home</a>
+                <a href="/dashboard">Dashboard</a>
                 {{#if loggedIn}}
-                <a href="/dashboard">dashboard</a>
-                <button id="logout" class="btn-no-style">logout</button>
+                <button id="logout" class="btn-no-style">Logout</button>
                 {{else}}
-                <a href="/login">login</a>
+                <a href="/login">Login</a>
                 {{/if}}
             </nav>
         </header>
