--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -6,11 +6,10 @@
     <form class="edit-post-form">
         <div>
             <input name="post-title" type="text" value="{{post.title}}" />
-            <span>({{format_url post.post_url}})</span>
+            <textarea>({{post.post_content}})</textarea> <!--  CONSIDER CHECKING "post.post_content" -->
         </div>
         <div>
-            {{post.vote_count}} {{format_plural "point" post.vote_count}} by you on {{format_date post.created_at}}
-            |
+            Post created by you on {{format_date post.created_at}}
             <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
         </div>
         <button type="submit">Save post</button>
@@ -30,6 +29,8 @@
 
 {{> comments post.comments}}
 
+{{#if loggedIn}}
 <script src="/javascript/edit-post.js"></script>
 <script src="/javascript/delete-post.js"></script>
 <script src="/javascript/comment.js"></script>
+{{/if}}
