--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,14 +1,14 @@
 <form class="login-form">
     <div>
-        <label for="email-login">email:</label>
-        <input type="text" id="email-login" />
+        <label for="username-login">username:</label>
+        <input type="text" id="username-login" />
     </div>
     <div>
         <label for="password-login">password:</label>
         <input type="password" id="password-login" />
     </div>
     <div>
-        <button type="submit">login</button>
+        <button type="submit">Login</button>
     </div>
 </form>
 
@@ -18,15 +18,11 @@
         <input type="text" id="username-signup" />
     </div>
     <div>
-        <label for="email-signup">email:</label>
-        <input type="text" id="email-signup" />
-    </div>
-    <div>
         <label for="password-signup">password:</label>
         <input type="password" id="password-signup" />
     </div>
     <div>
-        <button type="submit">signup</button>
+        <button type="submit">Signup</button>
     </div>
 </form>
 
