--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,21 +1,25 @@
 {{> post-info post}}
 
-{{#if loggedIn}}
+<div class="post-content"> {{post_content}} </div>
+<br />
+<br />
 <form class="comment-form">
     <div>
         <textarea name="comment-body"></textarea>
     </div>
-
+    {{#if loggedIn}}
     <div>
         <button type="submit">add comment</button>
-        <button type="button" class="upvote-btn">upvote</button>
     </div>
+    {{else}}
+    <div>
+        <a href="/login" class="login-redirect">add comment</a>
+    </div>
+    {{/if}}
 </form>
-{{/if}}
 
 {{> comments post.comments}}
 
 {{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
-<script src="/javascript/upvote.js"></script>
 {{/if}}
