--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,33 +8,41 @@ html {
     padding: 0;
     margin: 0;
     font-family: sans-serif;
-    color: #333;
+    color: #C9D0D7;
+    background-color: #0E1116;
 }
 
 a {
     text-decoration: none;
-    color: #225ca3;
-    font-weight: bold;
-    transition: color .1s;
+    color: #6BA4F8;
+    font-weight: default;
+    transition: color .2s;
 }
 
 a:hover {
     color: #3486eb;
 }
 
-button {
-    background-color: #225ca3;
-    border: 0;
+button,
+.login-redirect,
+#add-post-1 {
+    background-color: #22262C;
+    border: 1px solid;
+    border-color: #373B41;
     padding: 1%;
-    color: white;
-    font-weight: bold;
-    transition: background-color .1s;
+    color: #C9D0D7;
+    font-weight: lighter;
+    transition: color .4s;
     cursor: pointer;
     border-radius: 5px;
 }
 
-button:hover {
-    background-color: #3486eb;
+button:hover,
+.login-redirect:hover,
+#add-post-1:hover {
+    background-color: #31363C;
+    color: #CAD1D8;
+    border-color: #8D949D;
 }
 
 .post-list {
@@ -44,15 +52,20 @@ button:hover {
 
 textarea,
 input {
+    margin-top: 2px;
     padding: .5%;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid #31363C;
+    background-color: #020408;
+    color: #707680;
 }
 
 textarea:focus,
 input:focus {
     outline: none;
-    border: 1px solid #3486eb;
+    border: 1px solid #679DED;
+    background-color: #0E1116;
+    color: #CAD0D8;
 }
 
 textarea {
@@ -87,6 +100,10 @@ header {
 
 header h1 {
     font-size: 1em;
+}
+
+nav a {
+    padding: 10px;
 }
 
 main {
@@ -125,6 +142,14 @@ main {
     line-height: 150%;
 }
 
+.post-content {
+    color: rgb(224, 132, 71);
+}
+
+.date {
+    color: rgb(218, 105, 228);
+}
+
 .post .title span {
     font-style: italic;
     font-size: 90%;
@@ -134,15 +159,6 @@ main {
 .edit-link {
     display: block;
     margin: -1.5% 0 2% 0;
-}
-
-.upvote-btn {
-    background-color: #197d0f;
-    transition: background-color .1s;
-}
-
-.upvote-btn:hover {
-    background-color: #1f9c13;
 }
 
 .comment-form {
@@ -155,7 +171,8 @@ main {
 }
 
 .comment:nth-child(odd) {
-    background-color: #fff5eb;
+    background-color: #020408;
+    border: 2px solid #31363C;
 }
 
 .comment .meta {
@@ -170,6 +187,11 @@ main {
 
 .edit-post-form {
     margin-bottom: 5%;
+}
+
+.edit-post-fields {
+    display: flex;
+    flex-direction: column;
 }
 
 footer {
